工具添加